fixed spacing on post index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10683,7 +10683,7 @@ a:hover {
   font-size: 0.8em;
 }
 
-.post-page form {
+.form-page form {
   margin-top: 15px;
 }
 
@@ -10695,6 +10695,11 @@ a:hover {
 .edit-photo {
   margin: auto;
   margin-bottom: 15px;
+}
+
+.post-page .card-photo,
+.post-page .card-content {
+  margin-bottom: 10px;
 }
 
 .archive-card {
